--- a/src/components/FeatureComponents.astro
+++ b/src/components/FeatureComponents.astro
@@ -3,6 +3,8 @@
 import type { CollectionEntry } from "astro:content";
 import { getCollection } from "astro:content";
 import FeatureCard from "./widgets/FeatureCard.astro";
+import DigiComponents from "./DigiComponents.astro";
+import Slider from "./Slider.astro";
 
 const feature: CollectionEntry<"feature">[] = (
   await getCollection("feature")
@@ -13,7 +15,8 @@ const feature: CollectionEntry<"feature">[] = (
   <div class="container relative pt-10" style="
     background-color: aliceblue;
 ">
-    <div class="grid grid-cols-1 pb-5 text-center">
+<Slider/>
+    <div class="grid grid-cols-1 pb-5 text-center mt-10">
         <span class="bg-cyan-50 text-cyan-600 text-sm font-medium px-4 py-1 rounded-full mb-4 inline-block mx-auto">
             Security Solutions
         </span>
@@ -40,6 +43,7 @@ const feature: CollectionEntry<"feature">[] = (
         </div>
     </div>
 </div>
+
 <div class="grid lg:grid-cols-4 md:grid-cols-2 sm:grid-cols-2 grid-cols-1 gap-6 pt-6 p-2 pb-12" style="background-color: aliceblue";>
 {
       feature.map((feature) => (<FeatureCard feature={feature} />)
