--- a/src/pages/ptzcamera/[...slug].astro
+++ b/src/pages/ptzcamera/[...slug].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
-import ProductDetails from "../../components/ProductDetails.astro";
+import SlugProductDetails from "../../components/SlugProductDetails.astro";
 
 // Fetch all product entries and generate static paths
 export async function getStaticPaths() {
@@ -37,5 +37,5 @@ const structuredData = {
 ---
 
 <Layout title={product.data.title} structuredData={structuredData}>
-  <ProductDetails product={product} />
+  <SlugProductDetails product={product} />
 </Layout>
