--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -7,7 +7,7 @@ const sliders = await getCollection("slider");
 const doubledSliders = [...sliders, ...sliders];
 ---
 
-<div class="relative w-full overflow-hidden rounded-xl bg-[#f1f7ff] py-12">
+<div class="relative w-full overflow-hidden rounded-xl bg-[#f1f7ff] pt-10">
   <!-- Removed the gradient overlay since we have a solid bg color -->
   
   <!-- Adjusted decorative elements to complement the new background -->
