--- a/src/components/HeroComponents.astro
+++ b/src/components/HeroComponents.astro
@@ -1,8 +1,10 @@
 ---
+ import banner1 from '../assets/images/banner/Banner-1.jpg';
+ import banner2 from '../assets/images/banner/Banner-2.jpg';
 const slides = [
   {
     id: 1,
-    imgMain: '/src/assets/images/banner/Banner-1.jpg',
+    imgMain: banner1,
     title: 'First Slide',
     subTitle: 'Subtitle for Slide 1',
     content: 'Content for Slide 1',
@@ -10,7 +12,7 @@ const slides = [
   },
   {
     id: 2,
-    imgMain: '/src/assets/images/banner/Banner-2.jpg',
+    imgMain: banner2,
     title: 'Second Slide',
     subTitle: 'Subtitle for Slide 2',
     content: 'Content for Slide 2',
@@ -18,7 +20,7 @@ const slides = [
   },
   {
     id: 3,
-    imgMain: '/src/assets/images/banner/Banner-1.jpg',
+    imgMain: banner1,
     title: 'Third Slide',
     subTitle: 'Subtitle for Slide 3',
     content: 'Content for Slide 3',
@@ -68,7 +70,7 @@ const services = [
         data-key={slide.id}
       >
         <img
-          src={slide.imgMain}
+          src={slide.imgMain.src}
           alt={slide.title}
           class="w-full h-full object-cover"
         />
